# erdos170

./: .gitignore  README.md  baseline.json  patch_result.json  patch_table.txt  pyproject.toml  trial_plan_stage1_scaffold_repair.json
.github/workflows/: paper-automation.yml
configs/: e_hunt_breakthrough_cycle2.json  e_hunt_breakthrough_cycle2_fast_shard1.json  e_hunt_breakthrough_cycle3_tailfocus.json  e_hunt_breakthrough_cycle3_tailfocus_resume.json  e_hunt_delete_repair.json
outputs/: results_N29_m9.csv  sample_scan.csv  sample_solution.json
outputs/E1prime/: collisions.json  summary.csv
outputs/E1prime_target/: collisions.json  summary.csv
outputs/E1prime_thorough/: collisions.json  summary.csv
outputs/exp0_seed1/: results_N29_m9.csv
outputs/exp1a_pilot/: summary.csv  (+1 more)
paper/: README.md  main.tex  references.bib
results/: exact_frontier_summary.json  exact_frontier_summary.md  research_report_cycle1.md  research_report_to_date.md
scripts/: build_paper_artifacts.py  exp1a_pilot_summary.py  exp1a_prime_summary.py  fairness_sim.py  generate_frontier_atlas.py  generate_research_report_cycle1.py  generate_research_report_cycle2.py  generate_research_report_to_date.py  refresh_frontier_artifacts.py  report_excess_baseline.py  run_e_hunt_breakthrough_cycle2.py  run_e_hunt_breakthrough_cycle3.py  run_e_hunt_delete_repair.py  run_sat_sparse_ruler_feasibility.py  run_stage1_scaffold.py  run_stage1_scaffold_repair.py  run_targeted_jobs.py
tests/: test_e_hunt_cycle2.py  test_frontier_atlas.py  test_metrics.py
tools/: greedy_patch_runner.py  patch_missing.py
(+215 files in other folders)
