[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse-ruler"
version = "0.1.0"
description = "Sparse ruler rigidity experiment suite for Erdos Problem #170"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[project.scripts]
sparse-ruler = "sparse_ruler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
